# copilot-chat-api

./: .gitignore  README.md  pyproject.toml
copilot_chat/: api.py  server.py
